# mcp-hub

./: .gitignore  Cargo.toml  LICENSE  README.md  action.yml  demo.sh  demo.tape  install.ps1  install.sh
.github/workflows/: release.yml
presets/: registry.yml
src/: main.rs
src/audit/: engine.rs  mod.rs  report.rs  rules.rs
src/audit/data/: cve_database.json  deprecated.json  known_servers.json
src/audit/rules/: mod.rs
src/cli/: audit_cmd.rs  bench_cmd.rs  doctor_cmd.rs  export_cmd.rs  import_cmd.rs  mod.rs  preset_cmd.rs  scan.rs  search_cmd.rs
src/config/: discover.rs  mod.rs  model.rs  parser.rs
src/health/: check.rs  mcp_check.rs  mod.rs
src/preset/: mod.rs
src/registry/: mod.rs
src/tui/: app.rs  mod.rs
src/tui/views/: audit_view.rs  mod.rs  servers.rs
