[package]
name = "mcp-hub"
version = "0.1.0"
edition = "2021"
description = "One TUI to manage all your MCP servers"
license = "MIT"
repository = "https://github.com/jiale-cheng-ning/mcp-hub"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.32"
dirs = "6"
regex = "1"
